--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,23 @@
-beautifulsoup4==4.12.0
-boto3==1.26.104
-botocore==1.29.104
-certifi==2022.12.7
-charset-normalizer==3.1.0
-contourpy==1.0.7
+boto3==1.28.36
+botocore==1.31.36
+contourpy==1.1.0
 cycler==0.11.0
-filelock==3.10.7
-fonttools==4.39.3
-gdown==4.7.1
-idna==3.4
-importlib-resources==5.12.0
+fonttools==4.42.1
+importlib-resources==6.0.1
 jmespath==1.0.1
-kiwisolver==1.4.4
-matplotlib==3.7.1
-numpy==1.24.2
-packaging==23.0
-Pillow==9.5.0
+kiwisolver==1.4.5
+matplotlib==3.7.2
+numpy==1.24.4
+packaging==23.1
+Pillow==10.0.0
+pkg_resources==0.0.0
 pyparsing==3.0.9
-PySocks==1.7.1
 python-dateutil==2.8.2
 pytz==2023.3
-requests==2.28.2
-s3transfer==0.6.0
+s3transfer==0.6.2
 scipy==1.10.1
 six==1.16.0
-soupsieve==2.4
-tqdm==4.65.0
-urllib3==1.26.15
-zipp==3.15.0
+tdqm==0.0.1
+tqdm==4.66.1
+urllib3==1.26.16
+zipp==3.16.2
